smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/text-block-invalid-unicode.smithy
// Syntax error at line 4, column 16: Error parsing text block: Invalid unclosed unicode escape found in string | Model
namespace smithy.example

@documentation("""
    \ua""")
string MyString
